--- a/BalanceApp.ipynb
+++ b/BalanceApp.ipynb
@@ -328,39 +328,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tEG0SOPX54W8",
-        "outputId": "6357dc0f-0011-4708-d152-f6226adcf108"
+        "outputId": "e9ffe5de-0b4c-4d63-c13f-8964f82bbaf7"
       },
       "source": [
         "FormulaInput = input('Introduzca la fórmula que quiere usar 1, 2,3, o 4: ')\r\n",
         "Formula=int(FormulaInput)\r\n",
         "\r\n",
         "if Formula==1:\r\n",
-        "  CMS=(0.372*(FCM)+(0.0968*(math.pow(Peso,0.75))))*(1-(math.pow(2.72,(-0.192*((SemanaLact)+(3.67))))))\r\n",
-        "  #NRC DMI=(0.372*FCM+0.0968*BW^0.75)*(1 -e(-0.192*(WOL+3.67)))\r\n",
-        "  #=((0.372*FCM)+(0.0968*(Peso^0.75)))* (1  e(0.192(WOL3.67)))\r\n",
-        "#if Formula==2:\r\n",
-        "  #CMS=(0.29)+(0.372*(FCM)+(0.0968*( math.pow(Peso,0.75))))\r\n",
-        "  #NRC2 DMI(kg/dia)=0.29+0.372xFCMkg/dia+0.0968xBW0.75\r\n",
-        "#if Formula==3:\r\n",
-        " # CMS=(0.29)+(0.372*(FCM)+(0.0968*( math.pow(Peso,0.75))))\r\n",
-        "  #NRC3 DMI= 0.025P +0.1M +MSC- .4MSC\r\n",
+        "  CMS=(0.372*(FCM)+(0.0968*(math.pow(Peso,0.75))))*(1-(math.pow(2.72,(-0.192*((SemanaLact)+(3.67))))))#NRC DMI=((0.372*FCM)+(0.0968*(Peso^0.75)))* (1 - e(0.192(WOL3.67)))\r\n",
+        "if Formula==2:\r\n",
+        "  CMS=(0.29)+(0.372*(FCM)+(0.0968*( math.pow(Peso,0.75))))  #NRC2 DMI(kg/dia)=0.29+0.372xFCMkg/dia+0.0968xBW0.75\r\n",
+        "if Formula==3:\r\n",
+        "  CMS=(0.025*Peso)+(0.1*PdnLeche)+(0.88)-(0.4*0.88)  #NRC3 DMI= 0.025Peso +0.1PdnLeche +MSConc- 0.4 MSConc\r\n",
         "\r\n",
-        "#if Formula==4:\r\n",
-        " # CMS=(0.025*Peso)+(0.1*PdnLeche)   \r\n",
-        "  #Israel kg/ dia= 0.025 x PV + 0.1 X P.D\r\n",
+        "if Formula==4:\r\n",
+        "  CMS=(0.025*Peso)+(0.1*PdnLeche)    # Israel kg/ dia= (0.025 x Peso) + (0.1 X PdnLeche)\r\n",
         "\r\n",
         "FDNPasto=55\r\n",
         "\r\n",
         "ConsPastoFV=((120/FDNPasto)*Peso)/100\r\n",
-        "print (round(CMS),1)\r\n"
+        "print (round (CMS, 1))\r\n"
       ],
-      "execution_count": 63,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Introduzca la fórmula que quiere usar 1, 2,3, o 4: 1\n",
-            "23 1\n"
+            "22.8\n"
           ],
           "name": "stdout"
         }
@@ -435,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z8i0C0eU5maH",
-        "outputId": "2a6b3e83-2d75-485b-9fd3-3d92b50489fb"
+        "outputId": "580e1156-163d-43fa-f7c2-adfa509e9df5"
       },
       "source": [
         "BalENl=AporteENLPasto-ReqENl\r\n",
@@ -445,7 +440,7 @@
         "\r\n",
         "print(BalENl,BalPB,BalCa,BalP )"
       ],
-      "execution_count": 68,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +467,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q3NkB1La6py1",
-        "outputId": "b4d3cfa1-c329-42fc-8bdb-e547d8b876d6"
+        "outputId": "95f50141-e5ca-4464-b972-87196c385415"
       },
       "source": [
         "KgConc=CMS*(Concentrado/100)*(1/ConcMS) #100%MS del concentrado\r\n",
@@ -484,7 +479,7 @@
         "print(KgConc,ENlConc,PBConc, CaConc,PConc)\r\n",
         "\r\n"
       ],
-      "execution_count": 69,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,18 +541,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D7-YaE2s-391",
-        "outputId": "d932957c-4bd6-4d24-d669-ec4173202b96"
+        "outputId": "c9aa7ca0-4ec6-4d5c-b9d0-a520f4078fae"
       },
       "source": [
         "FvCons=CMS*(Pasto/100)/PastoMS\r\n",
-        "print(FvCons)"
+        "print (round (FvCons,2))"
       ],
-      "execution_count": 74,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "97.72432851053951\n"
+            "97.72\n"
           ],
           "name": "stdout"
         }
