--- a/HerramientasdeMonitoreo.ipynb
+++ b/HerramientasdeMonitoreo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HerramientasdeMonitoreo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMxMj85pQXDbQl7m4D1hWYd",
+      "authorship_tag": "ABX9TyMlGF/VO7PI9ZTxHfo7JasI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,9 @@
         "\n",
         "[Video Locomoción](https://drive.google.com/open?id=1fALRC964vLKFlYmHzaTC9pUuWbqg9pDR&authuser=fernando.guarin%40udea.edu.co&usp=drive_fs)\n",
         "\n",
-        "[Video locomoción red entrenada](https://drive.google.com/open?id=1fXQzI1-3tGSzzOZGMNKo8o5iqEXgGVe6&authuser=fernando.guarin%40udea.edu.co&usp=drive_fs)"
+        "[Video locomoción red entrenada](https://drive.google.com/open?id=1fXQzI1-3tGSzzOZGMNKo8o5iqEXgGVe6&authuser=fernando.guarin%40udea.edu.co&usp=drive_fs)\n",
+        "\n",
+        "[Video locomoción separando la salida](https://drive.google.com/file/d/1WybmwRNKgFJUhUKdGvmOb5AJ0ZwHeL2g/view?usp=sharing)"
       ]
     },
     {
